# unisport

./: .coverage  .env  .gitignore  .travis.yml  Procfile  README.md  alle.json  app.js  bower.json  create_db.py  everything.db  fu.json~  hu.json  import.ipynb  index.html  main.css  main.js  models.py  pyproject.toml  requirements.txt  routes.py  test.db  tu.json
.github/: dependabot.yml
.github/workflows/: pytest.yaml
.ipynb_checkpoints/: import-checkpoint.ipynb
backend/: .env  app.py  dotenv.example  everything.db  import.py  models.py  requirements.txt  routes.py  test.py  test_factory.py  test_routes.py
backend/python/: models.py
data/: classes.db
frontend/: bower.json  index.html
frontend/bower_components/angular-sanitize/: .bower.json
frontend/css/: main.css
frontend/js/: app.js
frontend/test/: conf.js  todo-spec.js
js/: app.js  main.js
json/: alle.json  fu.json
python/: import.py  models.py  routes.py  test.py
scrapers/: mergeSportsclasses.py  run_all.sh  scrapinghub.yml  scrapy.cfg  setup.py
scrapers/sportsClasses/: beuth.json  htw.json  items.py  pipelines.py  settings.py
scrapers/sportsClasses/spiders/: beuth.py  fu.json  fu.py  htw.py  htw.py~  hu.py  sportsSpider.py  tu.py
