[project]
name = "unisport"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.9"
dependencies = [
    "flask==3.1.0",
    "flask-cors==5.0.1",
    "flask-sqlalchemy==3.1.1",
    "gunicorn==23.0.0",
    "psycopg2==2.9.10",
    "pytest==8.3.5",
    "sentry-sdk[flask]==2.26.1",
]
