[project]
name = "unisport"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.9"
dependencies = [
    "flask==3.1.1",
    "flask-cors==6.0.1",
    "flask-sqlalchemy==3.1.1",
    "gunicorn==23.0.0",
    "psycopg2==2.9.10",
    "pytest==8.4.1",
    "sentry-sdk[flask]==2.30.0",
]
