[project]
name = "unisport"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask==3.1.3",
    "flask-cors==6.0.2",
    "flask-sqlalchemy==3.1.1",
    "gunicorn==25.3.0",
    "psycopg2==2.9.11",
    "pytest==9.0.3",
    "sentry-sdk[flask]==2.57.0",
]
